--- a/src/frontend/corgi.css
+++ b/src/frontend/corgi.css
@@ -1,5 +1,18 @@
+.container h1 {
+  font-family: 'BwSeidoRound', sans-serif;
+}
+
+.step {
+  color: #888;
+  font-family: 'benton-sans', sans-serif;
+  border: 2px dashed #DA9217;
+  text-align: center;
+  margin: 5 5px;
+  padding: 5px;
+}
+
 body {
-  background: #e1e1e1;
+  background: #f8f8f8;
   padding: 80px 0;
 }
 
@@ -36,7 +49,7 @@ li {
 }
 
 .brown {
-  background: #fcd677
+  background: #fcdd8f;
 }
 
 .white {
@@ -66,6 +79,7 @@ li {
   height: 72px;
   border-radius: 48px 55px 40px 40px;
   margin: 40px 0 0 12px;
+  border: 1px solid black;
 }
 
 .corgi_face_before {
@@ -104,6 +118,14 @@ li {
   height: 14px;
   border-radius: 8px;
   margin-left: -4px;
+}
+
+.nose-mouse {
+  background-color: #222222;
+  width: 50px;
+  height: 20px;
+  margin: auto;
+  z-index: 10;
 }
 
 .eye-left {
@@ -194,7 +216,7 @@ li {
 .corgi_breast::before {
   content: "";
   display: block;
-  background: #ffffff;
+  background: #fcdd8f;
   height: 72px;
   width: 16px;
   border-radius: 50%;
@@ -206,7 +228,7 @@ li {
 .corgi_breast::after {
   content: "";
   display: block;
-  background: #fff;
+  background: #fcdd8f;
   height: 64px;
   width: 16px;
   border-radius: 0 0 25% 50%;
@@ -227,7 +249,7 @@ li {
 
 .leg_fr_left::after {
   content: "";
-  background: #fff;
+  background: #fcdd8f;
   display: block;
   width: 16px;
   height: 8px;
@@ -249,7 +271,7 @@ li {
 
 .leg_fr_right::after {
   content: "";
-  background: #fff;
+  background: #fcdd8f;
   display: block;
   width: 16px;
   position: absolute;
@@ -319,7 +341,7 @@ li {
 
 .leg_ba_left::after {
   content: "";
-  background: #fff;
+  background: #fcdd8f;
   display: block;
   width: 16px;
   height: 8px;
@@ -341,7 +363,7 @@ li {
 
 .leg_ba_right::after {
   content: "";
-  background: #fff;
+  background: #fcdd8f;
   display: block;
   width: 16px;
   height: 8px;
@@ -354,7 +376,33 @@ li {
 .note {
   text-align: center;
   margin: 40px 0;
-  font-size: 10px;
+  font-size: 1rem;
   color: #333333;
   letter-spacing: 0.15rem;
+}
+
+.tokens {
+  display: grid;
+  justify-items: left;
+  margin: auto;
+  grid-row-gap: 20px;
+}
+
+.Button {
+  color: #fff;
+  margin: auto;
+  font-size: 1em;
+  padding: 5px;
+  font-size: 18px;
+  border-radius: 20px;
+  
+}
+
+.blue{
+  background-color: #6ad1e3; 
+}
+
+.newCorgiName {
+  padding: 5px;
+  border: 2px solid #000;
 }
