--- a/src/frontend/component/poster/poster.css
+++ b/src/frontend/component/poster/poster.css
@@ -1,40 +1,50 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
 .backup {
-  height: 35vh;
-  width: 90vw;
+  height: 40vh;
+  width: 96vw;
   background: rgba(251, 176, 64, 0.5);
   border-radius: 10px;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-rows: 2fr 3fr;
+  grid-row-gap: 2vw;
   margin: auto;
   padding: 2%;
+  justify-items: center;
+  align-items: center;
 }
 
-.text-poster {
-    width: 50%;
+.textPoster {
+  margin-top: 3vh;
 }
 
 .text1 {
+  margin: 5% 5% 5%;
   font-family: 'Poppins', sans-serif;
   font-size: 2rem;
-  font-weight: bold;
+  font-weight: bolder;
   color: #24272a;
   letter-spacing: 0;
-  line-height: 54px;
+  line-height: 2.1rem;
 }
 
 .text2 {
+  margin-left: 5%;
   font-family: 'Poppins', sans-serif;
-  font-size: 0.7rem;
+  font-size: 1rem;
   font-weight: lighter;
   color: #24272a;
   letter-spacing: 0;
-  line-height: 54px;
+  line-height: 1.1rem;
+}
+
+.imagePoster {
+  margin-top: -50px;
 }
 
 @media (min-width: 410px) {
   .backup {
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 }
