--- a/src/frontend/component/poster/poster.css
+++ b/src/frontend/component/poster/poster.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
-
 .backup {
   height: 40vh;
   width: 96vw;
@@ -39,7 +37,7 @@
 }
 
 .imagePoster {
-  margin-top: -50px;
+  margin-top: -10%;
 }
 
 @media (min-width: 410px) {
