footer add logo

--- a/src/frontend/component/footer/footer.css
+++ b/src/frontend/component/footer/footer.css
@@ -1,12 +1,24 @@
 .footer {
     font-family: 'Poppins', sans-serif;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-flow: row wrap;
+    justify-content: flex-start;
     background-color: #f8f8f8;
     width: 96vw;
     font-size: 0.7rem;
-    line-height: 0.8rem;
+    text-align: center;
+    margin: auto;
+    margin-top: 5vh;
+}
+
+.text {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+}
+
+.text p {
+    margin:0;
 }
 
 .blue {
