--- a/src/frontend/component/poster/poster.css
+++ b/src/frontend/component/poster/poster.css
@@ -40,7 +40,7 @@
   margin-top: -10%;
 }
 
-@media (min-width: 410px) {
+@media all and (min-width: 410px) {
   .backup {
     display: grid;
     grid-template-columns: 1fr 1fr;
