--- a/src/frontend/component/poster/corgiFull/corgiFull.css
+++ b/src/frontend/component/poster/corgiFull/corgiFull.css
@@ -1,11 +1,18 @@
 .corgiFull {
     width: 100%;
     height: 100%;
+    display: block;
+    position: relative;
 }
 
-.speaking {
-    position: relative;
+.img {
+    width: 100%;
+    height: 100%;
+}
+
+.svg {
+    position: absolute;
     left: 100px;
-    top: 10px;
+    top: -50px;
     z-index: 10;
 }
