--- a/src/frontend/component/tokens/corgi.css
+++ b/src/frontend/component/tokens/corgi.css
@@ -364,4 +364,6 @@ li {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
 }
