--- a/src/frontend/component/footer/footer.css
+++ b/src/frontend/component/footer/footer.css
@@ -5,8 +5,8 @@
     background-color: #f8f8f8;
     width: 96vw;
     font-size: 0.7rem;
-    margin: auto;
-    margin-top: 5vh;
+    margin: 3%;
+    /* margin-top: 5vh; */
     padding: 3vh auto;
 }
 
