--- a/src/frontend/component/poster/corgiFull/corgiFull.css
+++ b/src/frontend/component/poster/corgiFull/corgiFull.css
@@ -2,7 +2,6 @@
     width: 100%;
     height: 100%;
     display: block;
-    position: relative;
 }
 
 .img {
@@ -11,8 +10,8 @@
 }
 
 .svg {
-    position: absolute;
-    left: 100px;
-    top: -50px;
+    position: relative;
+    left: 40%;
+    bottom: -10%;
     z-index: 10;
 }
