logo corgi adjust

--- a/src/frontend/component/poster/corgiFull/corgiFull.css
+++ b/src/frontend/component/poster/corgiFull/corgiFull.css
@@ -11,7 +11,7 @@
 
 .svg {
     position: relative;
-    left: 30%;
-    bottom: -12vh;
+    /* left: 20%; */
+    bottom: -10vh;
     z-index: 10;
 }
