--- a/src/frontend/component/creations/creationDisplay/creation.css
+++ b/src/frontend/component/creations/creationDisplay/creation.css
@@ -3,6 +3,7 @@
     font-family: 'Poppins', sans-serif;
     display: flex;
     justify-content: space-between;
+    width: 96%;
 }
 
 .title {
@@ -21,7 +22,8 @@
 .address {
     text-align: left;
     font-size: 0.7rem;
-    margin: 0
+    margin: 0;
+    font-weight: lighter;
 }
 
 .orange {
