--- a/src/frontend/component/footer/footer.css
+++ b/src/frontend/component/footer/footer.css
@@ -5,7 +5,8 @@
     background-color: #f8f8f8;
     width: 100%;
     font-size: 0.7rem;
-    margin: 3% 1%;
+    margin: 0;
+    margin-top: 3%; 
     padding: 3vh auto;
 }
 
