--- a/src/frontend/container/App.css
+++ b/src/frontend/container/App.css
@@ -3,8 +3,8 @@ body {
 }
 
 .App {
-    margin: 3% auto;
+    margin-top: 3%;
+    margin-bottom: 0;
     display: grid;
     text-align: center;
-    width: 96%;
 }
