--- a/src/frontend/component/tokens/corgi/corgi.css
+++ b/src/frontend/component/tokens/corgi/corgi.css
@@ -27,16 +27,16 @@ li {
 
 .corgi {
   display: flex;
-  height: 40%;
-  width: 40%;
+  /* height: 40%;
+  width: 40%; */
 }
 
 .head, 
 .tail,
 .body {
   margin: 1% 0;
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
 }
 
 .body {
@@ -48,4 +48,5 @@ li {
 .tail {
   position: relative;
   bottom: -11px;
+  left: -2px;
 }
