change image css style and delete vm and vh props

--- a/src/frontend/component/footer/nearLogo/nearLogo.css
+++ b/src/frontend/component/footer/nearLogo/nearLogo.css
@@ -1,13 +1,8 @@
 .nearlogo {
-    width: 5vw;
-    height: 8vh;
+    width: 1.5rem;
+    height: 2.1rem;
     color: black;
     padding: auto;
     margin: auto;
     margin-left: 5vh;
-}
-
-.imgnear {
-    width: 100%;
-    height: 100%;
 }
