--- a/src/frontend/component/tokens/corgi/corgi.css
+++ b/src/frontend/component/tokens/corgi/corgi.css
@@ -7,10 +7,11 @@ li {
 }
 
 .note {
-  text-align: center;
+  text-align: left;
   margin: 40px 0;
   font-family: 'Poppins', sans-serif;
   font-size: 1rem;
+  font-weight: blod;
   color: #333333;
   letter-spacing: 0.15rem;
 }
