--- a/src/frontend/component/footer/footer.css
+++ b/src/frontend/component/footer/footer.css
@@ -1,22 +1,28 @@
 .footer {
     font-family: 'Poppins', sans-serif;
+    font-size: 0.7rem;
+    font-weight: lighter;
+    color: #4A4F54;
     display: flex;
     flex-flow: row wrap;
     background-color: #f8f8f8;
     width: 100%;
-    font-size: 0.7rem;
-    margin: 0;
-    margin-top: 3%; 
-    padding: 3vh auto;
+    margin-top: 3%;
+    padding: 3%;
+    vertical-align: middle;
 }
 
 .footer p {
     margin:0;
 }
 
+.text {
+    padding: 10px;
+}
+
 .left {
     text-align: start;
-    margin-left: 0;
+    margin-left: 15px;
     display: inline-flex;
     justify-content: start;
 }
@@ -26,7 +32,8 @@
     display: block;
     text-align: end;
     margin-right: 0;
-    right: 3vw;
+    right: 3%;
+    padding-top: 10px;
 }
 
 .blue {
@@ -36,4 +43,3 @@
 .black {
     color: black;
 }
-
