--- a/src/frontend/component/Button/Button.css
+++ b/src/frontend/component/Button/Button.css
@@ -5,5 +5,6 @@
     color: #fff;
     font-family: "Poppins", sans-serif;
     font-weight: bold;
-    margin: 3% auto;
+    margin: 3%;
+    padding: 1%;
   }
