--- a/src/frontend/component/home/poster/poster.css
+++ b/src/frontend/component/home/poster/poster.css
@@ -4,7 +4,7 @@
   background: rgba(251, 176, 64, 0.5);
   border-radius: 10px;
   display: grid;
-  grid-template-areas: "text text image image image";
+  grid-template-areas: "text  image image";
   grid-row-gap: 2vw;
   margin: 2% auto;
   padding: 2%;
@@ -20,23 +20,19 @@
 }
 
 .text1 {
-  /* margin: 5% 5% 5%; */
   font-family: 'Poppins', sans-serif;
-  font-size: 2rem;
-  font-weight: bolder;
+  font-size: 2em;
+  font-weight: 1200;
   color: #24272a;
   letter-spacing: 0;
-  line-height: 2.1rem;
 }
 
 .text2 {
-  /* margin-left: 5%; */
   font-family: 'Poppins', sans-serif;
-  font-size: 1rem;
-  font-weight: lighter;
+  font-size: 1em;
+  font-weight: 100;
   color: #24272a;
   letter-spacing: 0;
-  line-height: 1.1rem;
 }
 
 .imagePoster {
