--- a/src/frontend/component/tokens/corgi/corgi.css
+++ b/src/frontend/component/tokens/corgi/corgi.css
@@ -6,16 +6,6 @@ li {
   background: #fff;
 }
 
-.note {
-  text-align: left;
-  margin: 40px 0;
-  font-family: 'Poppins', sans-serif;
-  font-size: 1rem;
-  font-weight: blod;
-  color: #333333;
-  letter-spacing: 0.15rem;
-}
-
 .corgi {
   display: flex;
   /* height: 40%;
@@ -41,3 +31,13 @@ li {
   bottom: -11px;
   left: -2px;
 }
+
+/* .note {
+  text-align: left;
+  margin: 40px 0;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  font-weight: blod;
+  color: #333333;
+  letter-spacing: 0.15rem;
+} */
