--- a/src/frontend/component/tokens/corgi/corgi.css
+++ b/src/frontend/component/tokens/corgi/corgi.css
@@ -1,23 +1,16 @@
-li {
-  list-style: none;
+.corgi {
+  display: inline-flex;
 }
 
 .white {
   background: #fff;
 }
 
-.corgi {
-  display: flex;
-  /* height: 40%;
-  width: 40%; */
-}
-
 .head, 
 .tail,
 .body {
   margin: 1% 0;
-  /* height: 100%;
-  width: 100%; */
+  display: inline;
 }
 
 .body {
@@ -31,13 +24,3 @@ li {
   bottom: -11px;
   left: -2px;
 }
-
-/* .note {
-  text-align: left;
-  margin: 40px 0;
-  font-family: 'Poppins', sans-serif;
-  font-size: 1rem;
-  font-weight: blod;
-  color: #333333;
-  letter-spacing: 0.15rem;
-} */
