create generation page

--- a/src/frontend/component/footer/footer.css
+++ b/src/frontend/component/footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
     font-family: 'Poppins', sans-serif;
     font-size: 0.7rem;
-    font-weight: lighter;
+    font-weight: light;
     color: #4A4F54;
     display: flex;
     justify-content: space-between;
@@ -10,7 +10,7 @@
     margin-top: 3%;
     padding: 3%;
     vertical-align: middle;
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
 }
 
 .footer p {
