cannot record name and color

--- a/src/frontend/component/Generation/generation.css
+++ b/src/frontend/component/Generation/generation.css
@@ -1,3 +1,10 @@
-.head {
-    font-weight: 600;
+.generation {
+  width: 96%;
+  text-align: center;
+  margin: auto;
 }
+
+.head {
+  font-weight: 600;
+}
+
