--- a/src/frontend/component/Generation/colorpicker/colorpicker.css
+++ b/src/frontend/component/Generation/colorpicker/colorpicker.css
@@ -1,8 +1,14 @@
+.colorpicker {
+  display: flex;
+  flex-flow: row;
+}
 .result {
   background: #f15b28;
   border: 2px solid #24272a;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
   border-radius: 5px;
+  width: 50px;
+  height: 50px;
 }
 
 #color-picker {
@@ -12,6 +18,8 @@
 .select {
   cursor: pointer;
   position: relative;
-  left: 65px;
-  top: 27px;
+  left: 29px;
+  top: -26px;
+  z-index: 10;
+
 }
