--- a/src/frontend/component/common/Button/Button.css
+++ b/src/frontend/component/common/Button/Button.css
@@ -3,8 +3,8 @@
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     color: #fff;
-    font-family: "Poppins", sans-serif;
-    font-weight: bold;
-    margin: 3%;
-    padding: 1%;
+    font-weight: 600;
+    margin: 0;
+    padding: 5px 30px;
+    letter-spacing: 0;
   }
