--- a/src/frontend/component/Generation/generation.css
+++ b/src/frontend/component/Generation/generation.css
@@ -8,15 +8,6 @@
   font-weight: 600;
 }
 
-.sreen {
-  display: grid;
-  grid-template-areas:"info scr scr src";
-}
-
-.info {
-  grid-area: info;
-}
-
-.scr {
-  grid-area: scr;
+.content {
+  display: flex;
 }
