--- a/src/frontend/component/Generation/info/info.css
+++ b/src/frontend/component/Generation/info/info.css
@@ -3,12 +3,13 @@
   border-radius: 10px;
   padding: 1%;
   text-align: left;
-  width: 30%;
+  width: 25%;
+  margin: 1% 1%;
 }
 
 .title {
   font-weight: medium;
-  font-size: 1em;
+  font-size: 1.5em;
   margin: 10px 0;
 }
 
