--- a/src/frontend/component/creation/creation.css
+++ b/src/frontend/component/creation/creation.css
@@ -9,6 +9,7 @@
     font-size: 1rem;
     margin-left: 1%;
     margin-top: 1%;
+    margin-bottom: 0;
     display: block;
 }
 
@@ -22,4 +23,8 @@
 
 .orange {
     color: orange;
+}
+
+.blue {
+    color: lightblue;
 }
