--- a/src/frontend/component/Header/Nav/nav.css
+++ b/src/frontend/component/Header/Nav/nav.css
@@ -1,6 +1,9 @@
 .wrap {
-  display: flex;
+  margin: auto;
+  padding: 5px 30px;
+  display: inline-flex;
   flex-direction: row;
+  font-size: 1em;
 }
 
 .menutop {
@@ -8,18 +11,19 @@
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
   border: 2px solid #fbb040;
   background-color: #fff;
-  margin: auto 1%;
+  padding: 5px 30px;
 }
 
 .dropdown {
   position: relative;
   display: inline-block;
+  margin: 0 15px;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: #fdfcfc;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -36,10 +40,6 @@
     border-radius: 5px 5px 0 0;
 }
 
-.black {
-  color: #b9871c;
-}
-
-.blue {
-  color: #01c9fd;
+li.active {
+  background: #dddddd;
 }
