--- a/src/frontend/component/common/Button/Button.css
+++ b/src/frontend/component/common/Button/Button.css
@@ -4,7 +4,8 @@
     border-radius: 5px;
     color: #fff;
     font-weight: 600;
-    margin: 0;
+    margin: auto;
     padding: 5px 30px;
     letter-spacing: 0;
+    white-space: nowrap;
   }
