--- a/src/frontend/component/footer/footer.css
+++ b/src/frontend/component/footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
     font-family: 'Poppins', sans-serif;
-    font-size: 0.7rem;
+    font-size: 0.7em;
     font-weight: light;
     color: #4A4F54;
     display: flex;
