--- a/src/frontend/component/home/poster/poster.css
+++ b/src/frontend/component/home/poster/poster.css
@@ -51,3 +51,11 @@
     grid-area: image;
   }
 }
+
+.show {
+  border-radius: 5px;
+  border: 2px solid #fbb040;
+  background-color: #fff;
+  padding: 5px 30px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+}
