--- a/src/frontend/component/common/Modal/modal.css
+++ b/src/frontend/component/common/Modal/modal.css
@@ -4,11 +4,11 @@
     background-color: white;
     width: 70%;
     border: 1px solid #ccc;
+    border-radius: 5px 10px;
     box-shadow: 1px 1px 1px black;
     padding: 16px;
     left: 15%;
     top: 30%;
-    box-sizing: border-box;
     transition: all 0.3s ease-out;
 }
 
