send and share componnet

--- a/src/frontend/component/common/Modal/modal.css
+++ b/src/frontend/component/common/Modal/modal.css
@@ -1,7 +1,7 @@
 .Modal {
     position: fixed;
     z-index: 500;
-    background-color: white;
+    background-color: #f8f8f8;
     width: 70%;
     border: 1px solid #ccc;
     border-radius: 5px 10px;
