--- a/src/frontend/component/Single/single.css
+++ b/src/frontend/component/Single/single.css
@@ -1,5 +1,6 @@
-.wrapper {
+.wrapperS {
     width: 90%;
+    max-width: 1000px;
     margin: 2% auto;
     display: flex;
     justify-content: space-between;
@@ -23,4 +24,5 @@
 .text {
     margin-left: 10px;
     display: inline-block;
+    width: 200px;
 }
