--- a/src/frontend/component/creation/creation.css
+++ b/src/frontend/component/creation/creation.css
@@ -1,7 +1,13 @@
 .creation {
-    padding:1%;
     margin: 1%;
     display: inline-block;
+}
+
+.corgiboard {
+    width: 300px;
+    height: 300px;
+    overflow: scroll;
+    border-radius: 10px;
 }
 
 .dogname {
