--- a/src/frontend/component/Generation/generation.css
+++ b/src/frontend/component/Generation/generation.css
@@ -1,4 +1,5 @@
 .generation {
+  max-width: 1100px;
   width: 96%;
   text-align: center;
   margin: auto;
@@ -10,4 +11,11 @@
 
 .content {
   display: flex;
+  flex-direction: row;
+}
+
+@media all and (max-width: 765px) {
+  .content {
+    flex-direction: column;
+  }
 }
