--- a/src/frontend/component/Generation/info/info.css
+++ b/src/frontend/component/Generation/info/info.css
@@ -3,12 +3,12 @@
   border-radius: 10px;
   padding: 1%;
   text-align: left;
-  width: 25%;
-  margin: 1% 1%;
+  width: 50%;
+  margin: 1%;
 }
 
 .title {
-  font-weight: medium;
+  font-weight: 600;
   font-size: 1.5em;
   margin: 10px 0;
   display: block;
@@ -25,4 +25,10 @@
     font-weight: thin;
     display: inline-block;
     margin-top: 20px;
+}
+
+@media all and (max-width: 765px) {
+  .inputboard{
+    width: 90%;
+  }
 }
