--- a/src/frontend/component/Header/Header.css
+++ b/src/frontend/component/Header/Header.css
@@ -1,6 +1,14 @@
 .header {
-    margin: 5% 3%;
+    margin: 5% auto;
     padding: auto;
     display: flex;
     justify-content: space-between;
+    width: 70%;
+}
+
+@media all and (max-width: 750px) {
+    .header{
+        width: 90%;
+        margin: 5% auto;
+    }
 }
