--- a/src/frontend/component/Header/Nav/nav.css
+++ b/src/frontend/component/Header/Nav/nav.css
@@ -2,8 +2,12 @@
   margin: auto;
   padding: 5px 30px;
   display: inline-flex;
-  flex-direction: row;
   font-size: 1em;
+}
+
+.account{
+  display: inline-flex;
+  flex-direction: row;
 }
 
 .menutop {
@@ -24,7 +28,7 @@
   display: none;
   position: absolute;
   background-color: #fdfcfc;
-  min-width: 160px;
+  width: 100%;
   z-index: 1;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
   border-radius: 0 0 5px 5px;
@@ -46,4 +50,26 @@ li.active {
 .orange {
   color: #fbb040;
   display: inline;
+}
+
+@media all and (max-width: 1200px) {
+  .wrap{
+    font-size: 0.7em;
+  }
+  .menutop {
+    padding: 5px;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .wrap{
+    font-size: 0.5em;
+  }
+  .account{
+    flex-direction: column;
+  }
+  .menutop {
+    padding: 2px;
+    margin: 5px;
+  }
 }
