--- a/src/frontend/component/common/Modal/modal.css
+++ b/src/frontend/component/common/Modal/modal.css
@@ -2,19 +2,18 @@
     position: fixed;
     z-index: 500;
     background-color: #f8f8f8;
-    width: 70%;
+    width: 40%;
     border: 1px solid #ccc;
     border-radius: 5px 10px;
     box-shadow: 1px 1px 1px black;
     padding: 16px;
-    left: 15%;
     top: 30%;
+    left: 30%;
     transition: all 0.3s ease-out;
 }
 
-@media (min-width: 600px) {
+@media (max-width: 370px) {
     .Modal {
-        width: 500px;
-        left: calc(50% - 250px);
+        width: 300px;
     }
 }
