--- a/src/frontend/component/common/Modal/modal.css
+++ b/src/frontend/component/common/Modal/modal.css
@@ -3,11 +3,12 @@
     z-index: 500;
     background-color: #f8f8f8;
     width: 40%;
+    height: 60%;
     border: 1px solid #ccc;
     border-radius: 5px 10px;
     box-shadow: 1px 1px 1px black;
     padding: 16px;
-    top: 30%;
+    top: 20%;
     left: 30%;
     transition: all 0.3s ease-out;
 }
