--- a/src/frontend/component/Single/single.css
+++ b/src/frontend/component/Single/single.css
@@ -1,6 +1,6 @@
 .wrapperS {
     width: 70%;
-    max-width: 1000px;
+    max-width: 800px;
     margin: 2% auto;
     display: flex;
     justify-content: space-between;
@@ -25,4 +25,10 @@
     margin-left: 10px;
     display: inline-block;
     width: 200px;
+}
+
+@media all and (max-width: 415px) {
+    .text {
+        display: none;
+    }
 }
