--- a/src/frontend/component/common/Modal/modal.css
+++ b/src/frontend/component/common/Modal/modal.css
@@ -2,6 +2,7 @@
     position: fixed;
     z-index: 500;
     background-color: #f8f8f8;
+    min-width: 250px;
     width: 40%;
     height: 60%;
     border: 1px solid #ccc;
