--- a/src/frontend/component/Header/Nav/nav.css
+++ b/src/frontend/component/Header/Nav/nav.css
@@ -16,6 +16,7 @@
   background-color: #fff;
   padding: 5px 30px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  cursor: grabbing;
 }
 
 .dropdown {
