--- a/src/frontend/component/Single/single.css
+++ b/src/frontend/component/Single/single.css
@@ -15,6 +15,7 @@
     flex-flow: row wrap;
     border-radius: 5px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+    cursor: pointer;
 }
 
 .cardChar {
