--- a/src/frontend/component/Header/Header.css
+++ b/src/frontend/component/Header/Header.css
@@ -4,11 +4,20 @@
     display: flex;
     justify-content: space-between;
     width: 70%;
+    max-width: 1000px;
 }
 
-@media all and (max-width: 750px) {
+@media all and (max-width: 751px) {
     .header{
         width: 90%;
         margin: 1% auto;
+    }
+}
+
+@media all and (max-width: 376px) {
+    .header{
+        width: 90%;
+        margin: 1% auto;
+        flex-direction: column;
     }
 }
