--- a/src/frontend/component/Header/Nav/nav.css
+++ b/src/frontend/component/Header/Nav/nav.css
@@ -67,10 +67,9 @@ li.active {
     font-size: 0.5em;
   }
   .account{
-    flex-direction: column;
+    flex-direction: row;
   }
   .menutop {
-    padding: 2px;
-    margin: 5px;
+    padding: 8px 3px;
   }
 }
