--- a/src/frontend/component/common/spinner/spinner.css
+++ b/src/frontend/component/common/spinner/spinner.css
@@ -2,8 +2,8 @@
     font-size: 10px;
     margin: 50px auto;
     text-indent: -9999em;
-    width: 11em;
-    height: 11em;
+    width: 15em;
+    height: 15em;
     border-radius: 50%;
     background: #fbb040;
     background: -moz-linear-gradient(left, #fbb040 10%, rgba(255,187,49, 0) 42%);
@@ -29,7 +29,7 @@
     content: '';
   }
   .loader:after {
-    background: #f7fffb;
+    background: url("../../../../assets/corgicircle.png") no-repeat; /*#f7fffb*/
     width: 75%;
     height: 75%;
     border-radius: 50%;
