recipient width change send overscroll

--- a/src/frontend/component/common/Modal/modal.css
+++ b/src/frontend/component/common/Modal/modal.css
@@ -12,9 +12,10 @@
     top: 20%;
     left: 20%;
     transition: all 0.3s ease-out;
+    overflow: scroll;
 }
 
-@media (max-width: 370px) {
+@media (max-width: 374px) {
     .Modal {
         width: 300px;
     }
