small change for mobile

--- a/src/frontend/component/Single/single.css
+++ b/src/frontend/component/Single/single.css
@@ -28,8 +28,18 @@
     width: 200px;
 }
 
+.small {
+    display: none;
+}
+
 @media all and (max-width: 415px) {
     .text {
         display: none;
+    }
+
+    .small {
+        font-size: 1rem;
+        display: inline;
+        color: #2b73c7;
     }
 }
