--- a/src/frontend/component/common/Modal/modal.css
+++ b/src/frontend/component/common/Modal/modal.css
@@ -2,7 +2,8 @@
     position: fixed;
     z-index: 500;
     background-color: #f8f8f8;
-    min-width: 250px;
+    max-width: 600px;
+    min-width: 270px;
     width: 60%;
     height: 70%;
     border: 1px solid #ccc;
