--- a/src/frontend/component/common/Modal/modal.css
+++ b/src/frontend/component/common/Modal/modal.css
@@ -1,5 +1,5 @@
 .Modal {
-    position: relative;
+    position: fixed;
     z-index: 500;
     background-color: #f8f8f8;
     max-width: 600px;
@@ -11,6 +11,7 @@
     box-shadow: 1px 1px 1px black;
     padding: 16px;
     top: 20%;
+    left: 30%;
     transition: all 0.3s ease-out;
     overflow: scroll;
 }
@@ -18,5 +19,6 @@
 @media (max-width: 374px) {
     .Modal {
         width: 300px;
+        left: 10%;
     }
 }
